--- a/Chocolate_bar_ratings.html
+++ b/Chocolate_bar_ratings.html
@@ -236,8 +236,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <span id="cb5-43"><a href="#cb5-43" aria-hidden="true" tabindex="-1"></a>             <span class="at">n2=</span><span class="fu">html</span>(<span class="st">"N reviewed"</span>)) <span class="sc">%&gt;%</span></span>
 <span id="cb5-44"><a href="#cb5-44" aria-hidden="true" tabindex="-1"></a>  <span class="fu">tab_spanner</span>(<span class="at">label=</span><span class="st">"Rating"</span>, </span>
 <span id="cb5-45"><a href="#cb5-45" aria-hidden="true" tabindex="-1"></a>              <span class="at">columns=</span><span class="fu">c</span>(average<span class="sc">:</span>boxplot)) <span class="sc">%&gt;%</span></span>
-<span id="cb5-46"><a href="#cb5-46" aria-hidden="true" tabindex="-1"></a>  <span class="fu">tab_header</span>(<span class="at">title=</span><span class="fu">md</span>(<span class="st">"&lt;span style='color:#411d13'&gt;Ratings of Plain Dark Chocolate Bar&lt;/span&gt;"</span>),</span>
-<span id="cb5-47"><a href="#cb5-47" aria-hidden="true" tabindex="-1"></a>             <span class="at">subtitle=</span><span class="fu">md</span>(<span class="st">"Summary table of ratings (between 1 to 5) by 22 manufacturers with more than 15 reviews, according to *Flavors of Cacao*."</span>)) <span class="sc">%&gt;%</span></span>
+<span id="cb5-46"><a href="#cb5-46" aria-hidden="true" tabindex="-1"></a>  <span class="fu">tab_header</span>(<span class="at">title=</span><span class="fu">md</span>(<span class="st">"&lt;span style='color:#411d13'&gt;Ratings of Plain Dark Chocolate Bars&lt;/span&gt;"</span>),</span>
+<span id="cb5-47"><a href="#cb5-47" aria-hidden="true" tabindex="-1"></a>             <span class="at">subtitle=</span><span class="fu">md</span>(<span class="st">"Summary table of ratings (between 1 to 5) of by 22 manufacturers with more than 15 reviews, according to *Flavors of Cacao*."</span>)) <span class="sc">%&gt;%</span></span>
 <span id="cb5-48"><a href="#cb5-48" aria-hidden="true" tabindex="-1"></a>  <span class="fu">tab_source_note</span>(<span class="at">source_note =</span> gt<span class="sc">::</span><span class="fu">html</span>(<span class="st">"&lt;br&gt;#TidyTuesday Week 3  |  Data source: Flavors of Cacao, by way of Georgios and Kelsey  |  Inline boxplot function from Thomas Mock"</span>)) <span class="sc">%&gt;%</span></span>
 <span id="cb5-49"><a href="#cb5-49" aria-hidden="true" tabindex="-1"></a>  <span class="co"># Adjust sub-title font</span></span>
 <span id="cb5-50"><a href="#cb5-50" aria-hidden="true" tabindex="-1"></a>  <span class="fu">tab_style</span>(</span>
@@ -253,13 +253,13 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </details>
 <div class="cell-output-display">
 
-<div id="jvvvvzavqx" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<div id="xpohzbknre" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
 <style>@import url("https://fonts.googleapis.com/css2?family=Chivo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 html {
   font-family: Chivo, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#jvvvvzavqx .gt_table {
+#xpohzbknre .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -284,7 +284,7 @@ html {
   border-left-color: #D3D3D3;
 }
 
-#jvvvvzavqx .gt_heading {
+#xpohzbknre .gt_heading {
   background-color: #FFFFFF;
   text-align: left;
   border-bottom-color: #FFFFFF;
@@ -296,7 +296,7 @@ html {
   border-right-color: #D3D3D3;
 }
 
-#jvvvvzavqx .gt_title {
+#xpohzbknre .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -308,7 +308,7 @@ html {
   border-bottom-width: 0;
 }
 
-#jvvvvzavqx .gt_subtitle {
+#xpohzbknre .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -320,13 +320,13 @@ html {
   border-top-width: 0;
 }
 
-#jvvvvzavqx .gt_bottom_border {
+#xpohzbknre .gt_bottom_border {
   border-bottom-style: none;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#jvvvvzavqx .gt_col_headings {
+#xpohzbknre .gt_col_headings {
   border-top-style: none;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -341,7 +341,7 @@ html {
   border-right-color: #D3D3D3;
 }
 
-#jvvvvzavqx .gt_col_heading {
+#xpohzbknre .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 80%;
@@ -361,7 +361,7 @@ html {
   overflow-x: hidden;
 }
 
-#jvvvvzavqx .gt_column_spanner_outer {
+#xpohzbknre .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 80%;
@@ -373,15 +373,15 @@ html {
   padding-right: 4px;
 }
 
-#jvvvvzavqx .gt_column_spanner_outer:first-child {
+#xpohzbknre .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#jvvvvzavqx .gt_column_spanner_outer:last-child {
+#xpohzbknre .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#jvvvvzavqx .gt_column_spanner {
+#xpohzbknre .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #000000;
@@ -393,7 +393,7 @@ html {
   width: 100%;
 }
 
-#jvvvvzavqx .gt_group_heading {
+#xpohzbknre .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -418,7 +418,7 @@ html {
   vertical-align: middle;
 }
 
-#jvvvvzavqx .gt_empty_group_heading {
+#xpohzbknre .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -433,15 +433,15 @@ html {
   vertical-align: middle;
 }
 
-#jvvvvzavqx .gt_from_md > :first-child {
+#xpohzbknre .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#jvvvvzavqx .gt_from_md > :last-child {
+#xpohzbknre .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#jvvvvzavqx .gt_row {
+#xpohzbknre .gt_row {
   padding-top: 3px;
   padding-bottom: 3px;
   padding-left: 5px;
@@ -460,7 +460,7 @@ html {
   overflow-x: hidden;
 }
 
-#jvvvvzavqx .gt_stub {
+#xpohzbknre .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 80%;
@@ -473,7 +473,7 @@ html {
   padding-right: 5px;
 }
 
-#jvvvvzavqx .gt_stub_row_group {
+#xpohzbknre .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -487,11 +487,11 @@ html {
   vertical-align: top;
 }
 
-#jvvvvzavqx .gt_row_group_first td {
+#xpohzbknre .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-#jvvvvzavqx .gt_summary_row {
+#xpohzbknre .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -501,16 +501,16 @@ html {
   padding-right: 5px;
 }
 
-#jvvvvzavqx .gt_first_summary_row {
+#xpohzbknre .gt_first_summary_row {
   border-top-style: solid;
   border-top-color: #D3D3D3;
 }
 
-#jvvvvzavqx .gt_first_summary_row.thick {
+#xpohzbknre .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-#jvvvvzavqx .gt_last_summary_row {
+#xpohzbknre .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -520,7 +520,7 @@ html {
   border-bottom-color: #D3D3D3;
 }
 
-#jvvvvzavqx .gt_grand_summary_row {
+#xpohzbknre .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -530,7 +530,7 @@ html {
   padding-right: 5px;
 }
 
-#jvvvvzavqx .gt_first_grand_summary_row {
+#xpohzbknre .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -540,11 +540,11 @@ html {
   border-top-color: #D3D3D3;
 }
 
-#jvvvvzavqx .gt_striped {
+#xpohzbknre .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#jvvvvzavqx .gt_table_body {
+#xpohzbknre .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -553,7 +553,7 @@ html {
   border-bottom-color: #D3D3D3;
 }
 
-#jvvvvzavqx .gt_footnotes {
+#xpohzbknre .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -567,7 +567,7 @@ html {
   border-right-color: #D3D3D3;
 }
 
-#jvvvvzavqx .gt_footnote {
+#xpohzbknre .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding-left: 4px;
@@ -576,7 +576,7 @@ html {
   padding-right: 5px;
 }
 
-#jvvvvzavqx .gt_sourcenotes {
+#xpohzbknre .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -590,7 +590,7 @@ html {
   border-right-color: #D3D3D3;
 }
 
-#jvvvvzavqx .gt_sourcenote {
+#xpohzbknre .gt_sourcenote {
   font-size: 12px;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -598,64 +598,64 @@ html {
   padding-right: 5px;
 }
 
-#jvvvvzavqx .gt_left {
+#xpohzbknre .gt_left {
   text-align: left;
 }
 
-#jvvvvzavqx .gt_center {
+#xpohzbknre .gt_center {
   text-align: center;
 }
 
-#jvvvvzavqx .gt_right {
+#xpohzbknre .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#jvvvvzavqx .gt_font_normal {
+#xpohzbknre .gt_font_normal {
   font-weight: normal;
 }
 
-#jvvvvzavqx .gt_font_bold {
+#xpohzbknre .gt_font_bold {
   font-weight: bold;
 }
 
-#jvvvvzavqx .gt_font_italic {
+#xpohzbknre .gt_font_italic {
   font-style: italic;
 }
 
-#jvvvvzavqx .gt_super {
+#xpohzbknre .gt_super {
   font-size: 65%;
 }
 
-#jvvvvzavqx .gt_footnote_marks {
+#xpohzbknre .gt_footnote_marks {
   font-style: italic;
   font-weight: normal;
   font-size: 75%;
   vertical-align: 0.4em;
 }
 
-#jvvvvzavqx .gt_asterisk {
+#xpohzbknre .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-#jvvvvzavqx .gt_indent_1 {
+#xpohzbknre .gt_indent_1 {
   text-indent: 5px;
 }
 
-#jvvvvzavqx .gt_indent_2 {
+#xpohzbknre .gt_indent_2 {
   text-indent: 10px;
 }
 
-#jvvvvzavqx .gt_indent_3 {
+#xpohzbknre .gt_indent_3 {
   text-indent: 15px;
 }
 
-#jvvvvzavqx .gt_indent_4 {
+#xpohzbknre .gt_indent_4 {
   text-indent: 20px;
 }
 
-#jvvvvzavqx .gt_indent_5 {
+#xpohzbknre .gt_indent_5 {
   text-indent: 25px;
 }
 
@@ -666,10 +666,10 @@ tbody tr:last-child {
 <table class="gt_table">
   <thead class="gt_header">
     <tr>
-      <td colspan="10" class="gt_heading gt_title gt_font_normal" style=""><span style="color:#411d13">Ratings of Plain Dark Chocolate Bar</span></td>
+      <td colspan="10" class="gt_heading gt_title gt_font_normal" style=""><span style="color:#411d13">Ratings of Plain Dark Chocolate Bars</span></td>
     </tr>
     <tr>
-      <td colspan="10" class="gt_heading gt_subtitle gt_font_normal gt_bottom_border" style="font-weight: lighter;">Summary table of ratings (between 1 to 5) by 22 manufacturers with more than 15 reviews, according to <em>Flavors of Cacao</em>.</td>
+      <td colspan="10" class="gt_heading gt_subtitle gt_font_normal gt_bottom_border" style="font-weight: lighter;">Summary table of ratings (between 1 to 5) of by 22 manufacturers with more than 15 reviews, according to <em>Flavors of Cacao</em>.</td>
     </tr>
   </thead>
   <thead class="gt_col_headings">
